#
# cells system
# author:happykevins@gmail.com
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(cells)

### CMAKE_BUILD_TYPE: None Debug Release RelWithDebInfo MinSizeRel
SET(CMAKE_BUILD_TYPE Debug)

MESSAGE(STATUS "CMAKE_SYSTEM_NAME=" ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS "CMAKE_BUILD_TYPE=" ${CMAKE_BUILD_TYPE})

### platform definitions ###
IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")

# SET(CMAKE_AR "xiar")
# SET(CMAKE_LINKER "xild")

# SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
# SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "")
# SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "")
# SET(CMAKE_MODULE_LINKER_FLAGS_RELEASE "")

# SET(CMAKE_C_COMPILER "icc")
# SET(CMAKE_C_FLAGS_DEBUG "-xHOST -O0 -g -pthread")
# SET(CMAKE_C_FLAGS_RELEASE "-xHOST -ipo -fast -pthread")

# SET(CMAKE_CXX_COMPILER "icpc")
# SET(CMAKE_CXX_FLAGS_DEBUG "-xHOST -O0 -g -pthread")
# SET(CMAKE_CXX_FLAGS_RELEASE "-xHOST -ipo -fast -pthread")

# SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -g -Wall")

# SET(CMAKE_CXX_COMPILER "gcc")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -g -Wall")

ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")

### project defines ###
#ADD_DEFINITIONS(-D_DUMP_LOG)
ADD_DEFINITIONS(-D_DUMP_DEBUG)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

ADD_SUBDIRECTORY(src bin)


